--- a/faucets.html
+++ b/faucets.html
@@ -454,10 +454,24 @@
             <a href="https://faucetpay.io/?r=cryptohama" class="half-cta" target="_blank" rel="noopener">
                 <span>✅</span> Join FaucetPay
             </a>
+            <a href="https://hspay.io/?aff=15630" class="half-cta" target="_blank" rel="noopener">
+                <span>✅</span> Join HSPay
+            </a>
         </div>
 
         <h2 class="section-title">Top 20</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/freeltconline.png" alt="Freeltc" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Freeltc</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0007+ every 4mins</li>
+                    <li>Highest Paying Easy</li>
+                </ul>
+                <a href="https://freeltc.online/?r=11400" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/vie.png" alt="VieFaucet" style="width:42px;height:42px;border-radius:50%;">
@@ -479,17 +493,6 @@
                     <li>High Paying Trusted</li>
                 </ul>
                 <a href="https://earnbitmoon.club/?ref=145452" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/freeltconline.png" alt="Freeltc" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Freeltc</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0007+ every 4mins</li>
-                    <li>Highest Paying Easy</li>
-                </ul>
-                <a href="https://freeltc.online/?r=11400" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -526,17 +529,6 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/bupdate.png" alt="Bitupdate" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitupdate</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.00055+ every 5 mins</li>
-                    <li>$0.03 Min to FaucetPay</li>
-                </ul>
-                <a href="https://bitupdate.info/?r=15908" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Fly Crypto</div>
                 </div>
@@ -567,6 +559,17 @@
                     <li>High Paying PTC</li>
                 </ul>
                 <a href="https://www.coinpayu.com/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/bupdate.png" alt="Bitupdate" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitupdate</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.00055+ every 5 mins</li>
+                    <li>$0.03 Min to FaucetPay</li>
+                </ul>
+                <a href="https://bitupdate.info/?r=15908" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -636,14 +639,14 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/fc.png" alt="FaucetCrypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">FaucetCrypto</div>
+                    <img src="https://cryptohama.com/images/cvf.jpg" alt="CryptovieFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">CryptovieFaucet</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Multiple coins</li>
+                    <li>$0.0002 every 10 secs</li>
+                    <li>$0.01 to FaucetPay</li>
                 </ul>
-                <a href="https://faucetcrypto.com/r/51422" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://cryptoviefaucet.com?ref=136" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -692,6 +695,17 @@
                     <li>Multiple Ways to Earn</li>
                 </ul>
                 <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/fc.png" alt="FaucetCrypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">FaucetCrypto</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Multiple coins</li>
+                </ul>
+                <a href="https://faucetcrypto.com/r/51422" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -1099,6 +1113,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/zanlix.png" alt="Zanlix" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Zanlix</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>Monster Game</li>
+                    <li>High Paying</li>
+                </ul>
+                <a href="https://zanlix.eu/?ref=5893" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/monster.png" alt="Monster Faucet" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Monster Faucet</div>
                 </div>
@@ -1311,7 +1336,6 @@
                 style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
     </div>
     
-    <iframe src="//ads-bitcoin.com/app/codes/banner?rcd=MTY5Mg==" scrolling="no" style="width:300px; height:250px; border:0px; padding:0;overflow:hidden" allowtransparency="true"></iframe>
 
     <footer class="footer">
         <p>© 2025 CryptoHama. Updated Daily. Bookmark now and earn free crypto daily.</p>
