--- a/faucets.html
+++ b/faucets.html
@@ -764,6 +764,98 @@
             </div>
         </div>
 
+        <h2 class="section-title">No Timer</h2>
+        <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitfaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">SatoshiFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/cf.png" alt="CryptoFuture" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">CryptoFuture</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>10+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://cryptofuture.co.in/?r=8929" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/hf.png" alt="HotFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">HotFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>10+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/gamerlee.png" alt="GamerLee" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">GamerLee</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://gamerlee.com/?r=1868" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/chill.png" alt="Chillfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Chillfaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>8+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://chillfaucet.in/?r=17872&amp;xpost=true" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/cc.png" alt="ClaimCrypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">ClaimCrypto</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>LTC every 7 secs</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://claimcrypto.in/?r=2641" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/ltcfun.png" alt="FreeLTCFun" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">FreeLTCFun</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>LTC every 7 secs</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://freeltc.fun/?r=4411" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+        </div>
+
         <h2 class="section-title">Hourly</h2>
         <div class="cards">
             <div class="card">
@@ -1154,87 +1246,6 @@
                     <li>Faucet, PTC, Shortlinks</li>
                 </ul>
                 <a href="http://coolfaucet.hu/?ref=4141" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-        </div>
-
-        <h2 class="section-title">No Timer</h2>
-        <div class="cards">
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitfaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">SatoshiFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/cf.png" alt="CryptoFuture" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">CryptoFuture</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>10+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://cryptofuture.co.in/?r=8292" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/hf.png" alt="HotFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">HotFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>10+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/gamerlee.png" alt="GamerLee" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">GamerLee</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>10+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://gamerlee.com/?r=15058" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/cc.png" alt="ClaimCrypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">ClaimCrypto</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>LTC every 7 secs</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://claimcrypto.in/?r=6479" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/ltcfun.png" alt="FreeLTCFun" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">FreeLTCFun</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>LTC every 7 secs</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://freeltc.fun/?r=4312" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
         </div>
 
