--- a/faucets.html
+++ b/faucets.html
@@ -433,7 +433,7 @@
 <body>
 <div class="top-cta">
     <a href="#" target="_blank" rel="noopener">
-        <span>Use the site as a directory of working faucets</span> Bookmark Us!
+        <span>Bookmark us to have all the working faucets at your fingertips!</span> Updated Daily!
     </a>
 </div>
 
