--- a/faucets.html
+++ b/faucets.html
@@ -432,8 +432,8 @@
 </head>
 <body>
 <div class="top-cta">
-    <a href="#" target="_blank" rel="noopener">
-        <span>Bookmark us to have all the working faucets at your fingertips!</span> Updated Daily!
+    <a href="https://litecoinfarm.online/index.php?ref=274927" target="_blank" rel="noopener">
+        <span>0.0001 LTC Every Day</span> Roll, Invest in Rev Share, Withdraw Instantly
     </a>
 </div>
 
