--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://cryptohama.com/">
     <meta property="og:title" content="CryptoHama | Best Crypto Resources 2025">
     <meta property="og:description" content="Find the highest-paying crypto faucets, safest casinos, lowest-fee exchanges, and winning poker strategies.">
-    <meta property="og:image" content="https://cryptohama.com/images/og-preview.jpg"> <!-- Optional: add this image later -->
+    <meta property="og:image" content="https://cryptohama.com/images/og-preview.jpg"> 
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -301,7 +301,7 @@
                 <p class="card-description">Compare top crypto exchanges with lowest fees, highest security, and best trading pairs.</p>
             </article>
            
-            <article class="card" onclick="window.location.href='poker-guide.html'" role="link" tabindex="0" aria-label="Poker Rules & Crypto Poker Sites – Learn strategies and find the best real-money crypto poker platforms.">
+            <article class="card" onclick="window.location.href='poker.html'" role="link" tabindex="0" aria-label="Poker Rules & Crypto Poker Sites – Learn strategies and find the best real-money crypto poker platforms.">
                 <div class="card-icon" aria-hidden="true">🃏</div>
                 <h2 class="card-title">Poker Rules & Guides</h2>
                 <p class="card-description">Learn poker rules, strategies, and find the best crypto poker sites for real money games.</p>
@@ -350,7 +350,7 @@
           {
             "@type": "WebPage",
             "name": "Poker Rules & Crypto Poker Sites",
-            "url": "https://cryptohama.com/poker-guide.html"
+            "url": "https://cryptohama.com/poker.html"
           }
         ]
       }
