--- a/faucets.html
+++ b/faucets.html
@@ -421,19 +421,12 @@
         }
     </style>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-P63D5L004K');
-    </script>
+<script src="https://cdn.counter.dev/script.js" data-id="c94c53bd-f484-441d-94bb-8456ade0c778" data-utcoffset="6"></script>
 </head>
 <body>
 <div class="top-cta">
     <a href="https://litecoinfarm.online/index.php?ref=274927" target="_blank" rel="noopener">
-        <span>0.0001 LTC Every Day</span> Roll, Invest in Rev Share, Withdraw Instantly
+        <span>Free 0.0001 LTC Every Day</span> Claim Faucets, Instant withdrawal to FaucetPay
     </a>
 </div>
 
@@ -496,17 +489,6 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">MixFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0006+ every 5 mins</li>
-                    <li>Just Like VieFaucet</li>
-                </ul>
-                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/fey.ico" alt="Feyorra.top" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Feyorra.top</div>
                 </div>
@@ -515,6 +497,17 @@
                     <li>Easy Captcha, Quick</li>
                 </ul>
                 <a href="https://feyorra.top/?r=180567" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">MixFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0006+ every 5 mins</li>
+                    <li>Just Like VieFaucet</li>
+                </ul>
+                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -831,6 +824,17 @@
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://chillfaucet.in/?r=17872&amp;xpost=true" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/coindoog.ico" alt="Coindoog" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Coindoog</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://coindoog.com/?r=26728" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
