--- a/index.html
+++ b/index.html
@@ -301,7 +301,11 @@
                 <p class="card-description">Compare top crypto exchanges with lowest fees, highest security, and best trading pairs.</p>
             </article>
            
-            <article class="card" onclick="window.location.href='poker.html'" role="link" tabindex="0" aria-label="Poker Rules & Crypto Poker Sites – Learn strategies and find the best real-money crypto poker platforms.">
+<article class="card"
+    onclick="location.href='https://pokerhama.com'"
+    role="link"
+    tabindex="0"
+    aria-label="Poker Rules & Crypto Poker Sites – Learn strategies and find the best real-money crypto poker platforms.">
                 <div class="card-icon" aria-hidden="true">🃏</div>
                 <h2 class="card-title">Poker Rules & Guides</h2>
                 <p class="card-description">Learn poker rules, strategies, and find the best crypto poker sites for real money games.</p>
