--- a/faucets.html
+++ b/faucets.html
@@ -467,6 +467,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">MixFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0006+ every 5 mins</li>
+                    <li>Just Like VieFaucet</li>
+                </ul>
+                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/vie.png" alt="VieFaucet" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">VieFaucet</div>
                 </div>
@@ -497,17 +508,6 @@
                     <li>Easy Captcha, Quick</li>
                 </ul>
                 <a href="https://feyorra.top/?r=180567" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">MixFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0006+ every 5 mins</li>
-                    <li>Just Like VieFaucet</li>
-                </ul>
-                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -802,6 +802,17 @@
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/alcryp.png" alt="Allcrypt" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Allcrypt</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>10+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://altcryp.com/?r=42564" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
