--- a/faucets.html
+++ b/faucets.html
@@ -522,6 +522,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Fly Crypto</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0005+ every 5 Minutes</li>
+                    <li>No minimun FaucetPay</li>
+                </ul>
+                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/adbtc.jpg" alt="Adbtc" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Adbtc</div>
                 </div>
@@ -651,17 +662,6 @@
                     <li>PTC, Shortlinks, Offerwalls</li>
                 </ul>
                 <a href="https://fundsreward.com/?r=32249" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/one.png" alt="OneFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">OneFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0002 no timer</li>
-                    <li>PTC, Shortlinks, Offerwalls</li>
-                </ul>
-                <a href="https://onefaucet.in/?r=23569" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -824,6 +824,17 @@
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://gamerlee.com/?r=1868" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/one.png" alt="OneFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">OneFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0002 no timer</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://onefaucet.in/?r=23569" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
