--- a/faucets.html
+++ b/faucets.html
@@ -135,6 +135,56 @@
             background: rgba(255, 255, 255, 0.75);
         }
         .theme-icon { font-size: 1.25rem; }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 20px;
+    background: rgba(11, 17, 32, 0.6);
+    backdrop-filter: blur(12px);
+    border-bottom: 1px solid rgba(255,255,255,0.08);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+body.light-mode .header {
+    background: rgba(255, 255, 255, 0.8);
+    border-bottom: 1px solid rgba(0,0,0,0.07);
+}
+
+.branding {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 6px;
+    min-width: 0;
+}
+
+.header-subtitle {
+    font-size: 0.92rem;
+    color: #cbd5e1;          /* slightly darker than before */
+    font-weight: 500;
+    letter-spacing: 0.3px;
+    line-height: 1.35;
+}
+body.light-mode .header-subtitle {
+    color: #4a5568;          /* darker gray for light mode */
+}
+
+@media (min-width: 768px) {
+    .branding {
+        align-items: center;
+        flex-direction: row;
+        gap: 12px;
+    }
+    .header-subtitle {
+        font-size: 0.96rem;
+        margin-top: 0;
+    }
+}
 
         /* Main Wrapper */
         .main-wrapper {
@@ -437,6 +487,9 @@
                 <span class="crypto-part">Crypto</span><span class="hama-part">Hama</span>
             </div>
         </a>
+                <div class="header-subtitle">
+            All Links Opens in New Tab. Feel Free to click around. Bookmark Us!
+        </div>
         <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
             <span class="theme-icon">☀️</span>
         </button>
