--- a/faucets.html
+++ b/faucets.html
@@ -814,14 +814,14 @@ body.light-mode .header-subtitle {
         <div class="cards">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitfaucet</div>
+                    <img src="https://cryptohama.com/images/hf.png" alt="HotFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">HotFaucet</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>20+ coins</li>
+                    <li>10+ coins</li>
                     <li>Easy Captcha</li>
                 </ul>
-                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -836,30 +836,19 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/cf.png" alt="CryptoFuture" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">CryptoFuture</div>
+                    <img src="https://cryptohama.com/images/gamerlee.png" alt="GamerLee" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">GamerLee</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>10+ coins</li>
+                    <li>20+ coins</li>
                     <li>Easy Captcha</li>
                 </ul>
-                <a href="https://cryptofuture.co.in/?r=8929" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://gamerlee.com/?r=1868" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/hf.png" alt="HotFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">HotFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>10+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/alcryp.png" alt="Allcrypt" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Allcrypt</div>
+                    <img src="https://cryptohama.com/images/alcryp.png" alt="Altcrypt" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Altcrypt</div>
                 </div>
                 <ul class="card-bullets">
                     <li>10+ coins</li>
@@ -869,14 +858,25 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/gamerlee.png" alt="GamerLee" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">GamerLee</div>
+                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitfaucet</div>
                 </div>
                 <ul class="card-bullets">
                     <li>20+ coins</li>
                     <li>Easy Captcha</li>
                 </ul>
-                <a href="https://gamerlee.com/?r=1868" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/cf.png" alt="CryptoFuture" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">CryptoFuture</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>10+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://cryptofuture.co.in/?r=8929" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
