--- a/faucets.html
+++ b/faucets.html
@@ -663,14 +663,14 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/frw.ico" alt="Fundsreward" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Fundsreward</div>
+                    <img src="https://cryptohama.com/images/coinkeel.png" alt="Coinkeel" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Coinkeel</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>$0.0005+ every 8 mins</li>
-                    <li>PTC, Shortlinks, Offerwalls</li>
+                    <li>$0.0002+ every minute</li>
+                    <li>Min $0.005 Withdrawal</li>
                 </ul>
-                <a href="https://fundsreward.com/?r=32249" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://coinkeel.com/?r=cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -910,17 +910,6 @@ body.light-mode .header-subtitle {
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://hotfaucet.in/?r=3767" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/one.png" alt="OneFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">OneFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0002 no timer</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://onefaucet.in/?r=23569" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
